--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     height: 100vh;
-    width: 98vw;
+    width: 98.89vw;
     margin: 0;
     padding: 0;
     font-family: 'PN', sans-serif;
@@ -11,8 +11,8 @@ body{
     width: 100%;
     height: 10%;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
+    align-items: center; 
     padding: 0 15px;
     background-color: #f1f1f1;
     padding: 15px 0;
@@ -21,8 +21,8 @@ body{
 
 .logo > img{
     
-    width: 130px;
-    height: 41.6px;
+    width: 140px;
+    height: 50px;
     
 }
 .logo{
@@ -46,8 +46,8 @@ body{
 .search{
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    justify-content: end;
+    /* align-items: center; */
     padding: 0 15px;
 }
 .icon{
@@ -109,15 +109,17 @@ body{
     width: 100%;
     height: 70%;
 }
+
 .custom{
     
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     border-bottom: 1px solid black;
-    
+    margin-top: 10px;
     /* padding-left: 200px; */
 }
+
 .customleft{
     
     display: flex;
@@ -126,9 +128,11 @@ body{
     justify-content: center;
     padding-left: 200px;
 }
+
 .customleft >h2{
     padding: 0 20px;
 }
+
 .customright{
     display: flex;
     flex-direction: row;
@@ -136,25 +140,26 @@ body{
     justify-content: center;
     padding-right: 300px;
 }
+
 .customright > select{
     height: 39px;
     width: 120px;
     font-size: 16px;
 }
+
 .product{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     height: 100%;
     width: 100%;
-   
- 
-    
 }
+
 .imageproduct > img{
     height: 265.63px;
     width: 212.5px;
 }
+
 .row1{
     display: flex;
     flex-direction: row;
@@ -162,6 +167,7 @@ body{
     align-items: center;
     gap: 40px;
 }
+
 .status{
     display: flex;
     flex-direction: row;
@@ -171,6 +177,7 @@ body{
     
     
 }
+
 .status > p{
     margin: 0 5px;
     background-color: #1b1b1b;
@@ -186,8 +193,6 @@ body{
     
 
 }
-
-
 
 
 .footer{
@@ -210,52 +215,63 @@ body{
     
     background-color: #f3f3f3;
 }
+
 .sdt{
     color: red !important
 }
+
 .top-footer > img{
     width: 30px;
     height: 30px;
     margin-right: 10px;
     margin-left: 30px;
 }
+
 .headerfooter{
     font-size: 24px;
     font-weight: bold;
 }
+
 .contact{
     width: 50%;
     height: 100%;
     border: 1px solid white;
   
 }
+
 .location{
     display: flex;
     flex-direction: row;
     align-items: center;
     font-size: 18px;
 }
+
 .adress {
     margin-left: 24px;
     font-size: 18px;
 }
+
 .iconsocial > img{
     width: 40px;
     height: 40px;
     margin-left: 10px;
 }
+
 .footer-contact{
     display: flex;
     flex-direction: column;
 }
+
 .social{
     margin-left: 20px;
     font-size: 18px;
 }
+
 .support > h3 {
     font-size: 24px;
     margin-left: 20px;
 }
+
 .fanpage{
     font-size: 24px;
     margin-left: 50px;
