--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
 body{
     height: 100vh;
     width: 98.89vw;
+    overflow-y: scroll;
     margin: 0;
     padding: 0;
     font-family: 'PN', sans-serif;
 }
 
 .header{
-    position: sticky;
+    position: fixed;
+    z-index: 1;
     width: 100%;
     height: 10%;
     display: flex;
@@ -17,6 +19,7 @@ body{
     background-color: #f1f1f1;
     padding: 15px 0;
 }
+ 
 
 
 .logo > img{
@@ -39,7 +42,7 @@ body{
 }
 .menu > p{
     padding: 0 15px;
-    font-size: 14px;
+    font-size: 18px;
     font-weight: bold;
 }
 
@@ -67,10 +70,12 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid gray;
+    border: none;
+    margin: 0 10px;
     border-radius: 5px;
     margin-top: 5px;
     margin-left: 10px;
+    box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.36);
 }
 
 .borderinput > input{
