--- a/style.css
+++ b/style.css
@@ -18,9 +18,19 @@ body{
     padding: 0 15px;
     background-color: #f1f1f1;
     padding: 10px 0;
+    cursor: pointer;
+   
 }
- 
 
+
+.name > p {
+    cursor: pointer;
+}
+
+.name > p:hover {
+    cursor: pointer;
+    border-bottom: 1px solid #1b1b1b;
+}
 
 .logo > img{
     
@@ -44,6 +54,12 @@ body{
     padding: 0 15px;
     font-size: 18px;
     font-weight: bold;
+    cursor: pointer;
+   
+}
+.menu > p:hover{
+    cursor: pointer;
+    border-bottom: 1px solid #1b1b1b;
 }
 
 .search{
@@ -86,6 +102,7 @@ body{
     align-items: center;
     justify-content: center;
     background-color: #f1f1f1;
+    outline: none;
 }
 
 .collection {
@@ -113,7 +130,7 @@ body{
 
 .main{
     width: 100%;
-    height: 70%;
+    
 }
 
 .custom{
@@ -167,9 +184,13 @@ body{
 }
 
 .row1{
+    display: grid;
+    place-items: center;
+    width: 1254px;
     display: flex;
     flex-direction: row;
     justify-content: center;
+    flex-wrap: wrap;
     align-items: center;
     gap: 40px;
 }
@@ -196,6 +217,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     
 
 }
@@ -215,7 +237,7 @@ body{
     height: 5%;
     display: flex;
     flex-direction: row;
-    /* justify-content: center; */
+    margin-top: 5px;
     align-items: center;
     font-size: 18px;
     
@@ -281,4 +303,64 @@ body{
 .fanpage{
     font-size: 24px;
     margin-left: 50px;
+}
+
+#myModal{
+    width: 1000px;
+    height: 300px;
+}
+
+#myModal >h2{
+    display: flex;
+    justify-content: center;
+}
+
+
+.listsanpham{
+    display: flex;
+    border-bottom: 1px solid black;
+    flex-direction: column;
+
+    
+   
+}
+.sanpham{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+   
+}
+.sanpham > button{
+    width: 50px;
+    height: 30px;
+    align-items: center;
+}
+.thembtn{
+    display: flex;
+    width: 100px;
+
+}
+.btn{
+    
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+}
+#closeModalBtn{
+    width: 100px;
+    height: 30px;
+    border-radius: 10px;
+    font-family: 'PN', sans-serif;
+}
+#confirmBtn{
+    width: 100px;
+    height: 30px;
+    border-radius: 10px;
+    margin-left: 30px;
+    font-family: 'PN', sans-serif;
+}
+.text-bill{
+
 }
